# AntiSynthID

./: .gitignore  Cargo.toml  LICENSE  README.md  research.md
.beads/: beads.jsonl
.claude/: settings.local.json
src/: error.rs  lib.rs  main.rs
src/image/: load.rs  mod.rs  save.rs
src/model/: loader.rs  mod.rs
src/pipeline/: diffusion.rs  guidance.rs  mod.rs  vae.rs
